@@ -51,7 +51,7 @@ public abstract class CollectingBarrierStep<S> extends AbstractStep<S, S> implem
 
     public CollectingBarrierStep(final Traversal.Admin traversal, final int maxBarrierSize) {
         super(traversal);
-        this.traverserSet = this.traverserSetSupplier.get();
+        this.traverserSet = (TraverserSet<S>) this.traversal.getTraverserSetSupplier().get();
         this.maxBarrierSize = maxBarrierSize;
     }
 
@@ -87,7 +87,7 @@ public abstract class CollectingBarrierStep<S> extends AbstractStep<S, S> implem
         if (this.traverserSet.isEmpty())
             throw FastNoSuchElementException.instance();
         else {
-            final TraverserSet<S> temp = this.traverserSetSupplier.get();
+            final TraverserSet<S> temp = (TraverserSet<S>) this.traversal.getTraverserSetSupplier().get();
             IteratorUtils.removeOnNext(this.traverserSet.iterator()).forEachRemaining(t -> {
                 DetachedFactory.detach(t, true); // this should be dynamic
                 temp.add(t);
@@ -120,7 +120,7 @@ public abstract class CollectingBarrierStep<S> extends AbstractStep<S, S> implem
     @Override
     public CollectingBarrierStep<S> clone() {
         final CollectingBarrierStep<S> clone = (CollectingBarrierStep<S>) super.clone();
-        clone.traverserSet = this.traverserSetSupplier.get();
+        clone.traverserSet = (TraverserSet<S>) this.traversal.getTraverserSetSupplier().get();
         clone.barrierConsumed = false;
         return clone;
     }
