@@ -34,8 +34,7 @@ public final class ExpandableStepIterator<S> implements Iterator<Traverser.Admin
     private final Step<S, ?> hostStep;
 
     public ExpandableStepIterator(final Step<S, ?> hostStep) {
-        this.hostStep = hostStep;
-        this.traverserSet = new TraverserSet<>();
+        this(hostStep, new TraverserSet<>());
     }
 
     public ExpandableStepIterator(final Step<S, ?> hostStep, final TraverserSet<S> traverserSet) {
@@ -57,16 +56,6 @@ public final class ExpandableStepIterator<S> implements Iterator<Traverser.Admin
             return this.hostStep.getPreviousStep().next();
         /////////////
         return this.traverserSet.remove();
-    }
-
-    /**
-     * Replaces the traverserSet. Useful when providers want to use their own implementation of TraverserSet instead of default {@link TraverserSet}.
-     * Note that if the existing traverserSet has elements, they are discarded.
-     *
-     * @param traverserSet a new TraverserSet used to manage a set of traversers.
-     */
-    public void setTraverserSet(final TraverserSet<S> traverserSet) {
-        this.traverserSet = traverserSet;
     }
 
     public void add(final Iterator<Traverser.Admin<S>> iterator) {
